--- a/notebooks/aufgabe_04.ipynb
+++ b/notebooks/aufgabe_04.ipynb
@@ -10,8 +10,7 @@
     "import os.path\n",
     "\n",
     "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "from networkx.drawing.nx_agraph import graphviz_layout, to_agraph\n",
+    "from networkx.drawing.nx_agraph import to_agraph\n",
     "\n",
     "prefix = os.path.join(\"assets\", \"aufgabe_04\")\n",
     "os.makedirs(prefix, exist_ok=True)"
