--- a/notebooks/aufgabe_05.ipynb
+++ b/notebooks/aufgabe_05.ipynb
@@ -114,15 +114,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "def djikstra(graph: nx.Graph, start: str, end: str):\n",
+    "def dijkstra(graph: nx.Graph, start: str, end: str):\n",
     "    F = set()\n",
     "    dist = {node: float('inf') for node in graph.nodes()}\n",
     "    W = {node: [] for node in graph.nodes()}\n",
     "    dist[start] = 0\n",
     "    W[start] = [start]\n",
-    "    \n",
-    "    idx = 0\n",
-    "    a = to_agraph(graph)\n",
     "    \n",
     "    while end not in F:\n",
     "        # Find the node with the smallest distance\n",
@@ -140,7 +137,6 @@
     "                if new_dist < dist[neighbor]:\n",
     "                    dist[neighbor] = new_dist\n",
     "                    W[neighbor] = W[v_star] + [neighbor]\n",
-    "        idx = idx + 1\n",
     "\n",
     "    return W[end]"
    ],
@@ -197,7 +193,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "route = djikstra(graph, 's', 'z')",
+   "source": "route = dijkstra(graph, 's', 'z')",
    "id": "34ef26ee47fdbe6e",
    "outputs": [],
    "execution_count": null
