--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \author{Felix Hillebrand}
 \newcommand{\subject}{SSD4UE}
 
-\graphicspath{ {./images/} {./notebooks/assets/ }}
+\graphicspath{ {./images/} {./notebooks/assets/aufgabe_01 } {./notebooks/assets/aufgabe_02 } {./notebooks/assets/aufgabe_03 } {./notebooks/assets/aufgabe_04 } {./notebooks/assets/aufgabe_05 } {./notebooks/assets/aufgabe_06 }}
 
 % Set default font to OpenSans
 \renewcommand*\familydefault{\sfdefault}
@@ -95,19 +95,19 @@
         \begin{figure}[htbp]
             \centering
             \begin{subfigure}[b]{0.3\textwidth}
-                \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_01/A}
+                \includegraphics[height=0.2\textheight]{images/A}
                 \caption{A}
                 \label{fig:a01_a}
             \end{subfigure}
             \hfill
             \begin{subfigure}[b]{0.3\textwidth}
-                \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_01/B}
+                \includegraphics[height=0.2\textheight]{images/B}
                 \caption{B}
                 \label{fig:a01_b}
             \end{subfigure}
             \hfill
             \begin{subfigure}[b]{0.3\textwidth}
-                \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_01/C}
+                \includegraphics[height=0.2\textheight]{images/C}
                 \caption{C}
                 \label{fig:a01_c}
             \end{subfigure}
@@ -117,19 +117,19 @@
         \begin{figure}[htbp]
             \centering
             \begin{subfigure}[b]{0.3\textwidth}
-                \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_01/A_colored}
+                \includegraphics[height=0.2\textheight]{images/A_colored}
                 \caption{A - nicht Bipartit - Kante $\{5, 6\}$}
                 \label{fig:a01_a_colored}
             \end{subfigure}
             \hfill
             \begin{subfigure}[b]{0.3\textwidth}
-                \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_01/B_colored}
+                \includegraphics[height=0.2\textheight]{images/B_colored}
                 \caption{B - Bipartit}
                 \label{fig:a01_b_colored}
             \end{subfigure}
             \hfill
             \begin{subfigure}[b]{0.3\textwidth}
-                \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_01/C_colored}
+                \includegraphics[height=0.2\textheight]{images/C_colored}
                 \caption{C - Bipartit}
                 \label{fig:a01_c_colored}
             \end{subfigure}
@@ -209,7 +209,7 @@ Es gibt keine schreioperationen für Tabelle \texttt{C}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_02/dependency_graph}
+    \includegraphics[height=0.2\textheight]{images/dependency_graph}
     \caption{Dependency Graph}
     \label{fig:a02_dependency_graph}
 \end{figure}
@@ -299,7 +299,7 @@ F: {'s', 'g', 'z', 'h', 'i', 'c', 'b'} - dist: {'s': 0, 'a': 11, 'b': 10, 'c': 7
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[height=0.2\textheight]{notebooks/assets/aufgabe_05/astar}
+    \includegraphics[height=0.2\textheight]{astar}
     \caption{A*}
     \label{fig:astar_graph}
 \end{figure}
@@ -318,42 +318,42 @@ Ermitteln Sie die paarweise kürzesten Wege und zeichnen Sie die kürzeste Rundr
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=3cm]{notebooks/assets/aufgabe_06/jfk}
+    \includegraphics[width=3cm]{jfk}
     \caption{JFK}
     \label{fig:jfk}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=3cm]{notebooks/assets/aufgabe_06/laguardia}
+    \includegraphics[width=3cm]{laguardia}
     \caption{LaGuardia}
     \label{fig:laguardia}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=3cm]{notebooks/assets/aufgabe_06/newark}
+    \includegraphics[width=3cm]{newark}
     \caption{NewArk}
     \label{fig:newark}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=3cm]{notebooks/assets/aufgabe_06/jfk-laguardia}
+    \includegraphics[width=3cm]{jfk-laguardia}
     \caption{JFK - LaGuardia}
     \label{fig:jfk-laguardia}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=3cm]{notebooks/assets/aufgabe_06/laguardia-newark}
+    \includegraphics[width=3cm]{laguardia-newark}
     \caption{LaGuardia - NewArk}
     \label{fig:laguardia-newark}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=3cm]{notebooks/assets/aufgabe_06/roundtrip}
+    \includegraphics[width=3cm]{roundtrip}
     \caption{Roundtrip}
     \label{fig:roundtrip}
 \end{figure}
